--- a/backend/src/views/otp.jade
+++ b/backend/src/views/otp.jade
@@ -33,7 +33,7 @@ html
                                     td(height='16px' style='Margin:0;border-collapse:collapse!important;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:16px;font-weight:400;line-height:16px;margin:0;padding:0;text-align:left;vertical-align:top;word-wrap:break-word')  
                             center(style='min-width:532px;width:100%')
                                 div(align='center')
-                                p(style='Margin:0;Margin-bottom:10px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:24px;margin:0;margin-bottom:10px;padding:0;text-align:left') Mã xác minh sẽ hết hạn sau 48 giờ.
+                                p(style='Margin:0;Margin-bottom:10px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:24px;margin:0;margin-bottom:10px;padding:0;text-align:left') Mã xác minh sẽ hết hạn sau 30 phút.
                                 p(style='Margin:0;Margin-bottom:10px;color:#0a0a0a;font-family:Helvetica,Arial,sans-serif;font-size:14px;font-weight:400;line-height:24px;margin:0;margin-bottom:10px;padding:0;text-align:left')
                                     b Nếu bạn không yêu cầu mã
                                     | , bạn có thể bỏ qua tin nhắn này.
