scroll top when route page

--- a/frontend/client/src/index.css
+++ b/frontend/client/src/index.css
@@ -7,3 +7,23 @@
 a {
     text-decoration: none;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: rgb(97 42 42);
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555;
+}
